Update clean data
update clean data csv and 2nd notebook

--- a/2. Data Cleaning.ipynb
+++ b/2. Data Cleaning.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 9,
    "id": "cb5d468a",
    "metadata": {},
    "outputs": [],
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 45,
    "id": "f98c2769",
    "metadata": {
     "scrolled": true
@@ -24,7 +24,7 @@
        "((4397, 11), (4896, 11))"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 45,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 46,
    "id": "353071fb",
    "metadata": {},
    "outputs": [
@@ -71,8 +71,6 @@
        "      <th>Reviews</th>\n",
        "      <th>Ingredient</th>\n",
        "      <th>Main_Category</th>\n",
-       "      <th>Main_Category</th>\n",
-       "      <th>Main_Category</th>\n",
        "      <th>Category</th>\n",
        "      <th>Details</th>\n",
        "      <th>Image</th>\n",
@@ -80,93 +78,87 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>5696</th>\n",
-       "      <td>e.l.f. Cosmetics</td>\n",
-       "      <td>Pro Eyelash Curler</td>\n",
-       "      <td>3.3</td>\n",
-       "      <td>$5.00</td>\n",
-       "      <td>https://www.ulta.com/p/pro-eyelash-curler-pimp...</td>\n",
-       "      <td>2560974</td>\n",
-       "      <td>223.0</td>\n",
+       "      <th>6495</th>\n",
+       "      <td>Tweezerman</td>\n",
+       "      <td>Eyelash Guard &amp; Comb</td>\n",
+       "      <td>3.9</td>\n",
+       "      <td>$12.00</td>\n",
+       "      <td>https://www.ulta.com/p/eyelash-guard-comb-pimp...</td>\n",
+       "      <td>2591902</td>\n",
+       "      <td>182.0</td>\n",
        "      <td>Ingredients are not available</td>\n",
-       "      <td>Makeup</td>\n",
-       "      <td>Makeup</td>\n",
        "      <td>Makeup</td>\n",
        "      <td>Makeup Brushes &amp; Tools</td>\n",
-       "      <td>Details\\nBenefits\\nPremium eyelash curler\\nPro...</td>\n",
-       "      <td>https://media.ulta.com/i/ulta/1299?w=582&amp;h=582...</td>\n",
+       "      <td>Details\\nFeatures\\nLash guide perfectly lays a...</td>\n",
+       "      <td>https://media.ulta.com/i/ulta/2098?w=582&amp;h=582...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>769</th>\n",
-       "      <td>Dermalogica</td>\n",
-       "      <td>Intensive Moisture Cleanser</td>\n",
-       "      <td>4.6</td>\n",
-       "      <td>$42.00 - $66.00</td>\n",
-       "      <td>https://www.ulta.com/p/intensive-moisture-clea...</td>\n",
-       "      <td>2535737</td>\n",
-       "      <td>1763.0</td>\n",
-       "      <td>Water/Aqua, Glycerin Caprylic / Capric Triglyc...</td>\n",
+       "      <th>1339</th>\n",
+       "      <td>BYOMA</td>\n",
+       "      <td>Moisturizing Rich Cream</td>\n",
+       "      <td>4.5</td>\n",
+       "      <td>$15.99</td>\n",
+       "      <td>https://www.ulta.com/p/moisturizing-rich-cream...</td>\n",
+       "      <td>2601333</td>\n",
+       "      <td>202.0</td>\n",
+       "      <td>Aqua, Glycerin, Caprylic/Capric Triglyceride, ...</td>\n",
        "      <td>Skincare</td>\n",
-       "      <td>Skincare</td>\n",
-       "      <td>Skincare</td>\n",
-       "      <td>Cleansers</td>\n",
-       "      <td>Details\\nBenefits\\nRemoves make-up, sunscreen,...</td>\n",
-       "      <td>https://media.ulta.com/i/ulta/2535737?w=156&amp;h=156</td>\n",
+       "      <td>Moisturizers</td>\n",
+       "      <td>Details\\nBenefits\\nRich daily moisturizing cre...</td>\n",
+       "      <td>https://media.ulta.com/i/ulta/2601333?w=78&amp;h=78</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>5010</th>\n",
-       "      <td>Lancôme</td>\n",
-       "      <td>Artliner Precision Felt Tip Liquid Eyeliner</td>\n",
-       "      <td>4.4</td>\n",
-       "      <td>$31.00</td>\n",
-       "      <td>https://www.ulta.com/p/artliner-precision-felt...</td>\n",
-       "      <td>2301337</td>\n",
-       "      <td>1001.0</td>\n",
-       "      <td>Ingredients are not available</td>\n",
-       "      <td>Makeup</td>\n",
-       "      <td>Makeup</td>\n",
-       "      <td>Makeup</td>\n",
-       "      <td>Eyes</td>\n",
-       "      <td>Details\\nFeatures\\nLancôme Artliner Precision ...</td>\n",
-       "      <td>https://media.ulta.com/i/ulta/613?w=582&amp;h=582&amp;...</td>\n",
+       "      <th>2764</th>\n",
+       "      <td>Exuviance</td>\n",
+       "      <td>Daily Resurfacing Leave On Face Peel</td>\n",
+       "      <td>4.2</td>\n",
+       "      <td>$75.50</td>\n",
+       "      <td>https://www.ulta.com/p/daily-resurfacing-leave...</td>\n",
+       "      <td>2554745</td>\n",
+       "      <td>165.0</td>\n",
+       "      <td>Aqua/water/eau, Citric Acid, Arginine, Ammoniu...</td>\n",
+       "      <td>Skincare</td>\n",
+       "      <td>Treatment &amp; Serums</td>\n",
+       "      <td>Details\\nBenefits\\nNow you can safely and easi...</td>\n",
+       "      <td>https://media.ulta.com/i/ulta/2554745?w=78&amp;h=78</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "                 Brand                                         Name  Rating  \\\n",
-       "5696  e.l.f. Cosmetics                           Pro Eyelash Curler     3.3   \n",
-       "769        Dermalogica                  Intensive Moisture Cleanser     4.6   \n",
-       "5010           Lancôme  Artliner Precision Felt Tip Liquid Eyeliner     4.4   \n",
+       "           Brand                                  Name  Rating    Price  \\\n",
+       "6495  Tweezerman                  Eyelash Guard & Comb     3.9  $12.00    \n",
+       "1339       BYOMA               Moisturizing Rich Cream     4.5  $15.99    \n",
+       "2764   Exuviance  Daily Resurfacing Leave On Face Peel     4.2  $75.50    \n",
        "\n",
-       "                 Price                                               Link  \\\n",
-       "5696            $5.00   https://www.ulta.com/p/pro-eyelash-curler-pimp...   \n",
-       "769   $42.00 - $66.00   https://www.ulta.com/p/intensive-moisture-clea...   \n",
-       "5010           $31.00   https://www.ulta.com/p/artliner-precision-felt...   \n",
+       "                                                   Link       ID  Reviews  \\\n",
+       "6495  https://www.ulta.com/p/eyelash-guard-comb-pimp...  2591902    182.0   \n",
+       "1339  https://www.ulta.com/p/moisturizing-rich-cream...  2601333    202.0   \n",
+       "2764  https://www.ulta.com/p/daily-resurfacing-leave...  2554745    165.0   \n",
        "\n",
-       "           ID  Reviews                                         Ingredient  \\\n",
-       "5696  2560974    223.0                      Ingredients are not available   \n",
-       "769   2535737   1763.0  Water/Aqua, Glycerin Caprylic / Capric Triglyc...   \n",
-       "5010  2301337   1001.0                      Ingredients are not available   \n",
+       "                                             Ingredient Main_Category  \\\n",
+       "6495                      Ingredients are not available        Makeup   \n",
+       "1339  Aqua, Glycerin, Caprylic/Capric Triglyceride, ...      Skincare   \n",
+       "2764  Aqua/water/eau, Citric Acid, Arginine, Ammoniu...      Skincare   \n",
        "\n",
-       "     Main_Category Main_Category Main_Category                Category  \\\n",
-       "5696        Makeup        Makeup        Makeup  Makeup Brushes & Tools   \n",
-       "769       Skincare      Skincare      Skincare               Cleansers   \n",
-       "5010        Makeup        Makeup        Makeup                    Eyes   \n",
+       "                    Category  \\\n",
+       "6495  Makeup Brushes & Tools   \n",
+       "1339            Moisturizers   \n",
+       "2764      Treatment & Serums   \n",
        "\n",
        "                                                Details  \\\n",
-       "5696  Details\\nBenefits\\nPremium eyelash curler\\nPro...   \n",
-       "769   Details\\nBenefits\\nRemoves make-up, sunscreen,...   \n",
-       "5010  Details\\nFeatures\\nLancôme Artliner Precision ...   \n",
+       "6495  Details\\nFeatures\\nLash guide perfectly lays a...   \n",
+       "1339  Details\\nBenefits\\nRich daily moisturizing cre...   \n",
+       "2764  Details\\nBenefits\\nNow you can safely and easi...   \n",
        "\n",
        "                                                  Image  \n",
-       "5696  https://media.ulta.com/i/ulta/1299?w=582&h=582...  \n",
-       "769   https://media.ulta.com/i/ulta/2535737?w=156&h=156  \n",
-       "5010  https://media.ulta.com/i/ulta/613?w=582&h=582&...  "
+       "6495  https://media.ulta.com/i/ulta/2098?w=582&h=582...  \n",
+       "1339    https://media.ulta.com/i/ulta/2601333?w=78&h=78  \n",
+       "2764    https://media.ulta.com/i/ulta/2554745?w=78&h=78  "
       ]
      },
-     "execution_count": 17,
+     "execution_count": 46,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -183,7 +175,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 47,
    "id": "15e0ecdf",
    "metadata": {},
    "outputs": [],
@@ -196,33 +188,49 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
-   "id": "663f6207",
+   "execution_count": 53,
+   "id": "147f05d1",
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Drop lines without ingredients provided\n",
-    "indexAge=ulta[ ulta['Ingredient'].isin(['Ingredients are not available' ,'Ingredients is not available',\n",
-    "                                        'See full ingredient listing on packaging.',\n",
-    "                                        'See packaging for full ingredient listing.',\n",
-    "                                        'See packaging for full list of ingredients.',\n",
-    "                                        'See individual packaging for a full list of ingredients.',\n",
-    "                                        'A complete listing of ingredients are available on individual product pages.'\n",
-    "                                       ])].index\n",
-    "ulta.drop(indexAge,inplace=True)"
+    "#Drop lines with <3 ingredients provided\n",
+    "ulta['Ig_list']=ulta.apply(lambda x:x['Ingredient'].split(','),axis=1)\n",
+    "ulta['len']=ulta.apply(lambda x:len(x['Ig_list']),axis=1)\n",
+    "indexAge=ulta[ ulta['len']<3].index\n",
+    "ulta.drop(indexAge,inplace=True)\n",
+    "ulta = ulta.drop(columns=['Ig_list', 'len'])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
-   "id": "80cd0543",
+   "execution_count": 54,
+   "id": "74a4b1f9",
    "metadata": {},
    "outputs": [],
    "source": [
     "#Drop duplicates\n",
-    "\n",
-    "ulta.drop_duplicates(subset=[\"ID\"],inplace=True)\n",
+    "ulta.drop_duplicates(subset=[\"Name\",'ID'],inplace=True)\n",
     "ulta.to_csv('Clean_data',index=None)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "e644042d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3.9.13\n"
+     ]
+    }
+   ],
+   "source": [
+    "from platform import python_version\n",
+    "\n",
+    "print(python_version())"
    ]
   }
  ],
