Update clean data

--- a/2. Data Cleaning.ipynb
+++ b/2. Data Cleaning.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "id": "cb5d468a",
    "metadata": {},
    "outputs": [],
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 11,
    "id": "f98c2769",
    "metadata": {
     "scrolled": true
@@ -24,7 +24,7 @@
        "((4397, 11), (4896, 11))"
       ]
      },
-     "execution_count": 45,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 12,
    "id": "353071fb",
    "metadata": {},
    "outputs": [
@@ -78,87 +78,87 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>6495</th>\n",
-       "      <td>Tweezerman</td>\n",
-       "      <td>Eyelash Guard &amp; Comb</td>\n",
-       "      <td>3.9</td>\n",
-       "      <td>$12.00</td>\n",
-       "      <td>https://www.ulta.com/p/eyelash-guard-comb-pimp...</td>\n",
-       "      <td>2591902</td>\n",
-       "      <td>182.0</td>\n",
-       "      <td>Ingredients are not available</td>\n",
-       "      <td>Makeup</td>\n",
-       "      <td>Makeup Brushes &amp; Tools</td>\n",
-       "      <td>Details\\nFeatures\\nLash guide perfectly lays a...</td>\n",
-       "      <td>https://media.ulta.com/i/ulta/2098?w=582&amp;h=582...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1339</th>\n",
-       "      <td>BYOMA</td>\n",
-       "      <td>Moisturizing Rich Cream</td>\n",
-       "      <td>4.5</td>\n",
-       "      <td>$15.99</td>\n",
-       "      <td>https://www.ulta.com/p/moisturizing-rich-cream...</td>\n",
-       "      <td>2601333</td>\n",
-       "      <td>202.0</td>\n",
-       "      <td>Aqua, Glycerin, Caprylic/Capric Triglyceride, ...</td>\n",
+       "      <th>3198</th>\n",
+       "      <td>Everyday Humans</td>\n",
+       "      <td>Resting Beach Face SPF30 Sunscreen Serum</td>\n",
+       "      <td>4.6</td>\n",
+       "      <td>$24.00</td>\n",
+       "      <td>https://www.ulta.com/p/resting-beach-face-spf3...</td>\n",
+       "      <td>2565702</td>\n",
+       "      <td>146.0</td>\n",
+       "      <td>Homosalate 8%, Octisalate 4%, Avobenzone 3%, O...</td>\n",
        "      <td>Skincare</td>\n",
        "      <td>Moisturizers</td>\n",
-       "      <td>Details\\nBenefits\\nRich daily moisturizing cre...</td>\n",
-       "      <td>https://media.ulta.com/i/ulta/2601333?w=78&amp;h=78</td>\n",
+       "      <td>Details\\nBenefits\\nBroad spectrum SPF30 shield...</td>\n",
+       "      <td>https://media.ulta.com/i/ulta/2565702?w=78&amp;h=78</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2764</th>\n",
-       "      <td>Exuviance</td>\n",
-       "      <td>Daily Resurfacing Leave On Face Peel</td>\n",
-       "      <td>4.2</td>\n",
-       "      <td>$75.50</td>\n",
-       "      <td>https://www.ulta.com/p/daily-resurfacing-leave...</td>\n",
-       "      <td>2554745</td>\n",
-       "      <td>165.0</td>\n",
-       "      <td>Aqua/water/eau, Citric Acid, Arginine, Ammoniu...</td>\n",
+       "      <th>1074</th>\n",
+       "      <td>Michael Todd Beauty</td>\n",
+       "      <td>Soniclear Elite Patented Face &amp; Body Antimicro...</td>\n",
+       "      <td>4.6</td>\n",
+       "      <td>$169.00</td>\n",
+       "      <td>https://www.ulta.com/p/soniclear-elite-patente...</td>\n",
+       "      <td>2587500</td>\n",
+       "      <td>542.0</td>\n",
+       "      <td>Ingredients is not available</td>\n",
        "      <td>Skincare</td>\n",
-       "      <td>Treatment &amp; Serums</td>\n",
-       "      <td>Details\\nBenefits\\nNow you can safely and easi...</td>\n",
-       "      <td>https://media.ulta.com/i/ulta/2554745?w=78&amp;h=78</td>\n",
+       "      <td>Skincare Tools</td>\n",
+       "      <td>Details\\nBenefits\\nAntimicrobial Protection gu...</td>\n",
+       "      <td>https://media.ulta.com/i/ulta/2587500?w=78&amp;h=78</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7570</th>\n",
+       "      <td>Ardell</td>\n",
+       "      <td>Lash Contour Outer Volume Dramatic Eye-Elongat...</td>\n",
+       "      <td>3.6</td>\n",
+       "      <td>$12.99</td>\n",
+       "      <td>https://www.ulta.com/p/lash-contour-outer-volu...</td>\n",
+       "      <td>2586344</td>\n",
+       "      <td>22.0</td>\n",
+       "      <td>Ingredients</td>\n",
+       "      <td>Makeup</td>\n",
+       "      <td>Eyes</td>\n",
+       "      <td>Details\\nBenefits\\nSculpt and define your eyes...</td>\n",
+       "      <td>https://media.ulta.com/i/ulta/3173?w=582&amp;h=582...</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "           Brand                                  Name  Rating    Price  \\\n",
-       "6495  Tweezerman                  Eyelash Guard & Comb     3.9  $12.00    \n",
-       "1339       BYOMA               Moisturizing Rich Cream     4.5  $15.99    \n",
-       "2764   Exuviance  Daily Resurfacing Leave On Face Peel     4.2  $75.50    \n",
+       "                    Brand                                               Name  \\\n",
+       "3198      Everyday Humans           Resting Beach Face SPF30 Sunscreen Serum   \n",
+       "1074  Michael Todd Beauty  Soniclear Elite Patented Face & Body Antimicro...   \n",
+       "7570               Ardell  Lash Contour Outer Volume Dramatic Eye-Elongat...   \n",
        "\n",
-       "                                                   Link       ID  Reviews  \\\n",
-       "6495  https://www.ulta.com/p/eyelash-guard-comb-pimp...  2591902    182.0   \n",
-       "1339  https://www.ulta.com/p/moisturizing-rich-cream...  2601333    202.0   \n",
-       "2764  https://www.ulta.com/p/daily-resurfacing-leave...  2554745    165.0   \n",
+       "      Rating     Price                                               Link  \\\n",
+       "3198     4.6   $24.00   https://www.ulta.com/p/resting-beach-face-spf3...   \n",
+       "1074     4.6  $169.00   https://www.ulta.com/p/soniclear-elite-patente...   \n",
+       "7570     3.6   $12.99   https://www.ulta.com/p/lash-contour-outer-volu...   \n",
        "\n",
-       "                                             Ingredient Main_Category  \\\n",
-       "6495                      Ingredients are not available        Makeup   \n",
-       "1339  Aqua, Glycerin, Caprylic/Capric Triglyceride, ...      Skincare   \n",
-       "2764  Aqua/water/eau, Citric Acid, Arginine, Ammoniu...      Skincare   \n",
+       "           ID  Reviews                                         Ingredient  \\\n",
+       "3198  2565702    146.0  Homosalate 8%, Octisalate 4%, Avobenzone 3%, O...   \n",
+       "1074  2587500    542.0                       Ingredients is not available   \n",
+       "7570  2586344     22.0                                        Ingredients   \n",
        "\n",
-       "                    Category  \\\n",
-       "6495  Makeup Brushes & Tools   \n",
-       "1339            Moisturizers   \n",
-       "2764      Treatment & Serums   \n",
+       "     Main_Category        Category  \\\n",
+       "3198      Skincare    Moisturizers   \n",
+       "1074      Skincare  Skincare Tools   \n",
+       "7570        Makeup            Eyes   \n",
        "\n",
        "                                                Details  \\\n",
-       "6495  Details\\nFeatures\\nLash guide perfectly lays a...   \n",
-       "1339  Details\\nBenefits\\nRich daily moisturizing cre...   \n",
-       "2764  Details\\nBenefits\\nNow you can safely and easi...   \n",
+       "3198  Details\\nBenefits\\nBroad spectrum SPF30 shield...   \n",
+       "1074  Details\\nBenefits\\nAntimicrobial Protection gu...   \n",
+       "7570  Details\\nBenefits\\nSculpt and define your eyes...   \n",
        "\n",
        "                                                  Image  \n",
-       "6495  https://media.ulta.com/i/ulta/2098?w=582&h=582...  \n",
-       "1339    https://media.ulta.com/i/ulta/2601333?w=78&h=78  \n",
-       "2764    https://media.ulta.com/i/ulta/2554745?w=78&h=78  "
+       "3198    https://media.ulta.com/i/ulta/2565702?w=78&h=78  \n",
+       "1074    https://media.ulta.com/i/ulta/2587500?w=78&h=78  \n",
+       "7570  https://media.ulta.com/i/ulta/3173?w=582&h=582...  "
       ]
      },
-     "execution_count": 46,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -175,7 +175,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 13,
    "id": "15e0ecdf",
    "metadata": {},
    "outputs": [],
@@ -188,7 +188,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 14,
    "id": "147f05d1",
    "metadata": {},
    "outputs": [],
@@ -196,21 +196,21 @@
     "#Drop lines with <3 ingredients provided\n",
     "ulta['Ig_list']=ulta.apply(lambda x:x['Ingredient'].split(','),axis=1)\n",
     "ulta['len']=ulta.apply(lambda x:len(x['Ig_list']),axis=1)\n",
-    "indexAge=ulta[ ulta['len']<3].index\n",
+    "indexAge=ulta[ ulta['len']<=3].index\n",
     "ulta.drop(indexAge,inplace=True)\n",
     "ulta = ulta.drop(columns=['Ig_list', 'len'])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 15,
    "id": "74a4b1f9",
    "metadata": {},
    "outputs": [],
    "source": [
     "#Drop duplicates\n",
     "ulta.drop_duplicates(subset=[\"Name\",'ID'],inplace=True)\n",
-    "ulta.to_csv('Clean_data',index=None)"
+    "ulta.to_csv('Clean_data',index=None)\n"
    ]
   },
   {
