Update app data cleaning

--- a/2. Data Cleaning.ipynb
+++ b/2. Data Cleaning.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 13,
    "id": "cb5d468a",
    "metadata": {},
    "outputs": [],
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 14,
    "id": "f98c2769",
    "metadata": {
     "scrolled": true
@@ -24,7 +24,7 @@
        "((4397, 11), (4896, 11))"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 15,
    "id": "353071fb",
    "metadata": {},
    "outputs": [
@@ -78,87 +78,87 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>3198</th>\n",
-       "      <td>Everyday Humans</td>\n",
-       "      <td>Resting Beach Face SPF30 Sunscreen Serum</td>\n",
+       "      <th>2774</th>\n",
+       "      <td>Origins</td>\n",
+       "      <td>Hello, Calm Face Mask with Cannabis Sativa See...</td>\n",
        "      <td>4.6</td>\n",
-       "      <td>$24.00</td>\n",
-       "      <td>https://www.ulta.com/p/resting-beach-face-spf3...</td>\n",
-       "      <td>2565702</td>\n",
-       "      <td>146.0</td>\n",
-       "      <td>Homosalate 8%, Octisalate 4%, Avobenzone 3%, O...</td>\n",
+       "      <td>$32.00</td>\n",
+       "      <td>https://www.ulta.com/p/hello-calm-face-mask-wi...</td>\n",
+       "      <td>2542047</td>\n",
+       "      <td>376.0</td>\n",
+       "      <td>\"Water\\\\aqua\\\\eau, butylene glycol, prunus arm...</td>\n",
        "      <td>Skincare</td>\n",
-       "      <td>Moisturizers</td>\n",
-       "      <td>Details\\nBenefits\\nBroad spectrum SPF30 shield...</td>\n",
-       "      <td>https://media.ulta.com/i/ulta/2565702?w=78&amp;h=78</td>\n",
+       "      <td>Treatment &amp; Serums</td>\n",
+       "      <td>Details\\nBenefits\\nThis lush, nourishing mask ...</td>\n",
+       "      <td>Image is not available</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1074</th>\n",
-       "      <td>Michael Todd Beauty</td>\n",
-       "      <td>Soniclear Elite Patented Face &amp; Body Antimicro...</td>\n",
-       "      <td>4.6</td>\n",
-       "      <td>$169.00</td>\n",
-       "      <td>https://www.ulta.com/p/soniclear-elite-patente...</td>\n",
-       "      <td>2587500</td>\n",
-       "      <td>542.0</td>\n",
-       "      <td>Ingredients is not available</td>\n",
-       "      <td>Skincare</td>\n",
-       "      <td>Skincare Tools</td>\n",
-       "      <td>Details\\nBenefits\\nAntimicrobial Protection gu...</td>\n",
-       "      <td>https://media.ulta.com/i/ulta/2587500?w=78&amp;h=78</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>7570</th>\n",
-       "      <td>Ardell</td>\n",
-       "      <td>Lash Contour Outer Volume Dramatic Eye-Elongat...</td>\n",
+       "      <th>3343</th>\n",
+       "      <td>COOLA</td>\n",
+       "      <td>Peach Blossom Classic Body Sunscreen SPF 70</td>\n",
        "      <td>3.6</td>\n",
-       "      <td>$12.99</td>\n",
-       "      <td>https://www.ulta.com/p/lash-contour-outer-volu...</td>\n",
-       "      <td>2586344</td>\n",
-       "      <td>22.0</td>\n",
-       "      <td>Ingredients</td>\n",
+       "      <td>$28.00</td>\n",
+       "      <td>https://www.ulta.com/p/peach-blossom-classic-b...</td>\n",
+       "      <td>2575596</td>\n",
+       "      <td>11.0</td>\n",
+       "      <td>Active: Avobenzone 3.0%, Homosalate 5.0%, Octi...</td>\n",
+       "      <td>Skincare</td>\n",
+       "      <td>Suncare</td>\n",
+       "      <td>Details\\nBenefits\\n70%+ certified organic ingr...</td>\n",
+       "      <td>Image is not available</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8371</th>\n",
+       "      <td>Morphe</td>\n",
+       "      <td>Morphe 2 X Maddie Ziegler Changement Artistry ...</td>\n",
+       "      <td>2.9</td>\n",
+       "      <td>$18.00</td>\n",
+       "      <td>https://www.ulta.com/p/morphe-2-x-maddie-ziegl...</td>\n",
+       "      <td>2601774</td>\n",
+       "      <td>8.0</td>\n",
+       "      <td>Ingredients\\nPlease see product packaging for ...</td>\n",
        "      <td>Makeup</td>\n",
        "      <td>Eyes</td>\n",
-       "      <td>Details\\nBenefits\\nSculpt and define your eyes...</td>\n",
-       "      <td>https://media.ulta.com/i/ulta/3173?w=582&amp;h=582...</td>\n",
+       "      <td>Details\\nShades\\nTop Row: Reflex (shimmer whit...</td>\n",
+       "      <td>https://media.ulta.com/i/ulta/3974?w=582&amp;h=582...</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "                    Brand                                               Name  \\\n",
-       "3198      Everyday Humans           Resting Beach Face SPF30 Sunscreen Serum   \n",
-       "1074  Michael Todd Beauty  Soniclear Elite Patented Face & Body Antimicro...   \n",
-       "7570               Ardell  Lash Contour Outer Volume Dramatic Eye-Elongat...   \n",
+       "        Brand                                               Name  Rating  \\\n",
+       "2774  Origins  Hello, Calm Face Mask with Cannabis Sativa See...     4.6   \n",
+       "3343    COOLA        Peach Blossom Classic Body Sunscreen SPF 70     3.6   \n",
+       "8371   Morphe  Morphe 2 X Maddie Ziegler Changement Artistry ...     2.9   \n",
        "\n",
-       "      Rating     Price                                               Link  \\\n",
-       "3198     4.6   $24.00   https://www.ulta.com/p/resting-beach-face-spf3...   \n",
-       "1074     4.6  $169.00   https://www.ulta.com/p/soniclear-elite-patente...   \n",
-       "7570     3.6   $12.99   https://www.ulta.com/p/lash-contour-outer-volu...   \n",
+       "        Price                                               Link       ID  \\\n",
+       "2774  $32.00   https://www.ulta.com/p/hello-calm-face-mask-wi...  2542047   \n",
+       "3343  $28.00   https://www.ulta.com/p/peach-blossom-classic-b...  2575596   \n",
+       "8371  $18.00   https://www.ulta.com/p/morphe-2-x-maddie-ziegl...  2601774   \n",
        "\n",
-       "           ID  Reviews                                         Ingredient  \\\n",
-       "3198  2565702    146.0  Homosalate 8%, Octisalate 4%, Avobenzone 3%, O...   \n",
-       "1074  2587500    542.0                       Ingredients is not available   \n",
-       "7570  2586344     22.0                                        Ingredients   \n",
+       "      Reviews                                         Ingredient  \\\n",
+       "2774    376.0  \"Water\\\\aqua\\\\eau, butylene glycol, prunus arm...   \n",
+       "3343     11.0  Active: Avobenzone 3.0%, Homosalate 5.0%, Octi...   \n",
+       "8371      8.0  Ingredients\\nPlease see product packaging for ...   \n",
        "\n",
-       "     Main_Category        Category  \\\n",
-       "3198      Skincare    Moisturizers   \n",
-       "1074      Skincare  Skincare Tools   \n",
-       "7570        Makeup            Eyes   \n",
+       "     Main_Category            Category  \\\n",
+       "2774      Skincare  Treatment & Serums   \n",
+       "3343      Skincare             Suncare   \n",
+       "8371        Makeup                Eyes   \n",
        "\n",
        "                                                Details  \\\n",
-       "3198  Details\\nBenefits\\nBroad spectrum SPF30 shield...   \n",
-       "1074  Details\\nBenefits\\nAntimicrobial Protection gu...   \n",
-       "7570  Details\\nBenefits\\nSculpt and define your eyes...   \n",
+       "2774  Details\\nBenefits\\nThis lush, nourishing mask ...   \n",
+       "3343  Details\\nBenefits\\n70%+ certified organic ingr...   \n",
+       "8371  Details\\nShades\\nTop Row: Reflex (shimmer whit...   \n",
        "\n",
        "                                                  Image  \n",
-       "3198    https://media.ulta.com/i/ulta/2565702?w=78&h=78  \n",
-       "1074    https://media.ulta.com/i/ulta/2587500?w=78&h=78  \n",
-       "7570  https://media.ulta.com/i/ulta/3173?w=582&h=582...  "
+       "2774                             Image is not available  \n",
+       "3343                             Image is not available  \n",
+       "8371  https://media.ulta.com/i/ulta/3974?w=582&h=582...  "
       ]
      },
-     "execution_count": 12,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -175,7 +175,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 16,
    "id": "15e0ecdf",
    "metadata": {},
    "outputs": [],
@@ -188,22 +188,76 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
-   "id": "147f05d1",
+   "execution_count": 17,
+   "id": "e12995e8",
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Drop lines with <3 ingredients provided\n",
-    "ulta['Ig_list']=ulta.apply(lambda x:x['Ingredient'].split(','),axis=1)\n",
-    "ulta['len']=ulta.apply(lambda x:len(x['Ig_list']),axis=1)\n",
-    "indexAge=ulta[ ulta['len']<=3].index\n",
-    "ulta.drop(indexAge,inplace=True)\n",
-    "ulta = ulta.drop(columns=['Ig_list', 'len'])"
+    "def remove_prefix(text, prefix):\n",
+    "    return text[text.startswith(prefix) and len(prefix):].strip()\n",
+    "\n",
+    "ulta['Ingredient']=ulta.apply(lambda x: remove_prefix(x['Ingredient'],'Ingredients\\n'),axis=1)\n",
+    "ulta['Ingredient']=ulta.apply(lambda x: remove_prefix(x['Ingredient'],'Active:'),axis=1)\n",
+    "ulta['Ingredient']=ulta.apply(lambda x: x['Ingredient'].lower(),axis=1)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 18,
+   "id": "1e2594ac",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "avobenzone 3%, homosalate 15%, octisalate 5%, octocrylene 7%.\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "['avobenzone', 'homosalate', 'octisalate', 'octocrylene']"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import re\n",
+    "ig=ulta['Ingredient'][1951]\n",
+    "print(ig)\n",
+    "def get_ig_list(ig):\n",
+    "    l=re.split('[,]',ig.split(\".\")[0])\n",
+    "    l=[x.strip().lower().rstrip(\".*\") for x in l  ]\n",
+    "    l=[re.sub(\"\\d*%\",\"\",x).strip() for x in l if not x.startswith(('*',\"please\",\"water\",\"aqua\",\"eau\",\"ingredient\")) \n",
+    "       and not x.isdigit() and \"may contain\" not in x ]\n",
+    "    return sorted(l)\n",
+    "\n",
+    "get_ig_list(ig)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "147f05d1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Drop lines with <=3 ingredients provided\n",
+    "ulta['Ig_list']=ulta.apply(lambda x: get_ig_list(x['Ingredient']),axis=1)\n",
+    "ulta['len']=ulta.apply(lambda x:len(x['Ig_list']),axis=1)\n",
+    "#ulta['Ig_list'][1951]\n",
+    "indexAge=ulta[ ulta['len']<=3].index\n",
+    "ulta.drop(indexAge,inplace=True)\n",
+    "#ulta = ulta.drop(columns=['Ig_list', 'len'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
    "id": "74a4b1f9",
    "metadata": {},
    "outputs": [],
@@ -215,7 +269,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 21,
    "id": "e644042d",
    "metadata": {},
    "outputs": [
@@ -232,6 +286,14 @@
     "\n",
     "print(python_version())"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f2ed1d01",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
